--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
-                                                    <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                                    <color key="backgroundColor" white="1" alpha="0.25" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="Ahy-aQ-Vnb" firstAttribute="top" secondItem="bnF-5u-3n9" secondAttribute="bottom" constant="24" id="7By-mk-KaW"/>
                                                         <constraint firstAttribute="trailing" secondItem="Ahy-aQ-Vnb" secondAttribute="trailing" constant="16" id="Hoe-oC-FRU"/>
@@ -78,6 +78,7 @@
                                             <constraint firstItem="xiu-9N-Zpb" firstAttribute="top" secondItem="Wcv-4u-lld" secondAttribute="top" id="r9e-1v-4N4"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="back" destination="xiu-9N-Zpb" id="9J1-TH-pXw"/>
                                             <outlet property="imageContent" destination="bnF-5u-3n9" id="wsn-fA-F0l"/>
                                             <outlet property="imageNameContent" destination="Ahy-aQ-Vnb" id="XUq-bG-2LH"/>
                                         </connections>
