--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -133,19 +133,19 @@
                                         <rect key="frame" x="70" y="98" width="240" height="50.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topBoard" translatesAutoresizingMaskIntoConstraints="NO" id="xZd-lG-tEc">
-                                                <rect key="frame" x="0.0" y="0.0" width="240" height="50.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="240.00000000000003" height="50.5"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sJR-hK-trQ">
-                                                <rect key="frame" x="67" y="5.5" width="106.5" height="40"/>
+                                                <rect key="frame" x="58.5" y="8.5" width="123.5" height="34"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNe-T7-Sga">
-                                                        <rect key="frame" x="0.0" y="0.0" width="106.5" height="26"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="123.5" height="22"/>
                                                         <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="22"/>
                                                         <color key="textColor" red="0.99215686270000003" green="0.92156862750000001" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="record: 999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5i-Ip-z9d">
-                                                        <rect key="frame" x="22.5" y="26" width="61.5" height="14"/>
+                                                        <rect key="frame" x="23" y="22" width="77" height="12"/>
                                                         <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="12"/>
                                                         <color key="textColor" red="0.99215686270000003" green="0.92156862750000001" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -178,7 +178,7 @@
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rightPlant" translatesAutoresizingMaskIntoConstraints="NO" id="xNV-ie-0BW">
-                                        <rect key="frame" x="275" y="86" width="75" height="112.5"/>
+                                        <rect key="frame" x="275" y="86" width="75" height="112.50000000000001"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="xNV-ie-0BW" secondAttribute="height" multiplier="2:3" id="rEp-7K-Ivh"/>
                                             <constraint firstAttribute="width" constant="75" id="wJa-rl-FKp"/>
@@ -202,7 +202,7 @@
                                                 <rect key="frame" x="4" y="4" width="53" height="52.5"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4Q-9y-wjh">
-                                                <rect key="frame" x="12" y="17.5" width="37" height="26"/>
+                                                <rect key="frame" x="12" y="19.5" width="37" height="22"/>
                                                 <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="22"/>
                                                 <color key="textColor" red="0.99215686274509807" green="0.92156862745098034" blue="0.77254901960784317" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -311,6 +311,7 @@
                         <viewLayoutGuide key="safeArea" id="eHO-Xd-MB2"/>
                         <connections>
                             <outlet property="cardCollection" destination="qbe-1l-dAC" id="hzA-WA-8oa"/>
+                            <outlet property="menuButton" destination="0Q5-uf-NzG" id="AUf-5v-M1z"/>
                             <outlet property="recordLabel" destination="k5i-Ip-z9d" id="Yu0-0t-MQq"/>
                             <outlet property="scoreLabel" destination="RNe-T7-Sga" id="FJz-wO-1Aw"/>
                             <outlet property="timerLabel" destination="o4Q-9y-wjh" id="bqo-ax-jg3"/>
@@ -338,47 +339,54 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="board" translatesAutoresizingMaskIntoConstraints="NO" id="5qm-Cf-Kfs">
                                         <rect key="frame" x="0.0" y="0.0" width="256" height="205"/>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="0lu-E3-DuO">
-                                        <rect key="frame" x="37" y="115" width="182" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0lu-E3-DuO">
+                                        <rect key="frame" x="57" y="38.5" width="142" height="128"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMK-aM-ew3">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                <color key="backgroundColor" red="1" green="0.46274509800000002" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Q4-Oq-iRl">
+                                                <rect key="frame" x="0.0" y="0.0" width="142" height="60"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="68y-Xe-eXx"/>
-                                                    <constraint firstAttribute="width" constant="50" id="vT0-wq-WIH"/>
+                                                    <constraint firstAttribute="height" constant="60" id="AiZ-AS-zi8"/>
                                                 </constraints>
+                                                <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="32"/>
+                                                <state key="normal" title="restart">
+                                                    <color key="titleColor" red="0.99215686270000003" green="0.92156862750000001" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
                                                 <connections>
-                                                    <action selector="home:" destination="ed2-kc-aor" eventType="touchUpInside" id="3br-My-KwE"/>
+                                                    <action selector="restart:" destination="ed2-kc-aor" eventType="touchUpInside" id="XKB-MS-FV7"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBR-uh-ZVw">
-                                                <rect key="frame" x="66" y="0.0" width="50" height="50"/>
-                                                <color key="backgroundColor" red="1" green="0.46274509800000002" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q4K-bx-Y6E">
+                                                <rect key="frame" x="0.0" y="68" width="142" height="60"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="alw-kg-h49"/>
-                                                    <constraint firstAttribute="width" constant="50" id="pkF-mh-ujY"/>
+                                                    <constraint firstAttribute="height" constant="60" id="skM-Vx-lKu"/>
                                                 </constraints>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQQ-89-lac">
-                                                <rect key="frame" x="132" y="0.0" width="50" height="50"/>
-                                                <color key="backgroundColor" red="1" green="0.46274509800000002" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="lnH-od-G27"/>
-                                                    <constraint firstAttribute="width" constant="50" id="pdP-oq-1tb"/>
-                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="32"/>
+                                                <state key="normal" title="back">
+                                                    <color key="titleColor" red="0.99215686270000003" green="0.92156862750000001" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="back:" destination="ed2-kc-aor" eventType="touchUpInside" id="ubr-4m-XOS"/>
+                                                </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="7Q4-Oq-iRl" secondAttribute="trailing" id="Byd-Nt-P3f"/>
+                                            <constraint firstItem="7Q4-Oq-iRl" firstAttribute="top" secondItem="0lu-E3-DuO" secondAttribute="top" id="M66-QH-Fje"/>
+                                            <constraint firstItem="7Q4-Oq-iRl" firstAttribute="leading" secondItem="0lu-E3-DuO" secondAttribute="leading" id="PPX-Nr-1Dn"/>
+                                            <constraint firstItem="Q4K-bx-Y6E" firstAttribute="leading" secondItem="0lu-E3-DuO" secondAttribute="leading" id="e6J-SH-aRQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="Q4K-bx-Y6E" secondAttribute="bottom" id="gB1-97-5Zk"/>
+                                            <constraint firstAttribute="trailing" secondItem="Q4K-bx-Y6E" secondAttribute="trailing" id="ilI-aJ-fRH"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="5qm-Cf-Kfs" secondAttribute="trailing" id="3LC-6U-bty"/>
-                                    <constraint firstAttribute="bottom" secondItem="0lu-E3-DuO" secondAttribute="bottom" constant="40" id="JAl-cM-dPP"/>
+                                    <constraint firstItem="0lu-E3-DuO" firstAttribute="centerY" secondItem="Nce-g2-aTg" secondAttribute="centerY" id="CCp-rT-24r"/>
+                                    <constraint firstItem="0lu-E3-DuO" firstAttribute="centerX" secondItem="Nce-g2-aTg" secondAttribute="centerX" id="FWc-T0-QoO"/>
                                     <constraint firstItem="5qm-Cf-Kfs" firstAttribute="top" secondItem="Nce-g2-aTg" secondAttribute="top" id="Qg0-Vk-Hna"/>
                                     <constraint firstItem="5qm-Cf-Kfs" firstAttribute="leading" secondItem="Nce-g2-aTg" secondAttribute="leading" id="Yjg-cR-4KC"/>
                                     <constraint firstAttribute="bottom" secondItem="5qm-Cf-Kfs" secondAttribute="bottom" id="hFl-5T-KqQ"/>
-                                    <constraint firstItem="0lu-E3-DuO" firstAttribute="centerX" secondItem="Nce-g2-aTg" secondAttribute="centerX" id="vqz-4O-QUi"/>
                                     <constraint firstAttribute="width" secondItem="Nce-g2-aTg" secondAttribute="height" multiplier="1:0.8" id="zV0-Ao-WHT"/>
                                 </constraints>
                             </view>
@@ -390,7 +398,7 @@
                                 </constraints>
                                 <state key="normal" image="buttonClose"/>
                                 <connections>
-                                    <action selector="close:" destination="ed2-kc-aor" eventType="touchUpInside" id="dSQ-Of-hpg"/>
+                                    <action selector="close:" destination="ed2-kc-aor" eventType="touchUpInside" id="uCM-tD-c9B"/>
                                 </connections>
                             </button>
                         </subviews>
