--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -27,24 +27,24 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lxE-h9-5K2">
-                                <rect key="frame" x="0.0" y="80" width="320" height="408"/>
+                                <rect key="frame" x="0.0" y="80" width="320" height="428"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Jzh-Xa-3gX">
-                                    <size key="itemSize" width="301" height="400"/>
+                                    <size key="itemSize" width="301" height="420"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GameCell" id="Wcv-4u-lld" customClass="GameCell" customModule="MEMOO" customModuleProvider="target">
-                                        <rect key="frame" x="9.5" y="0.0" width="301" height="400"/>
+                                        <rect key="frame" x="9.5" y="0.0" width="301" height="420"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="301" height="400"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="301" height="420"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xiu-9N-Zpb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="301" height="400"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="301" height="420"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="board_2" translatesAutoresizingMaskIntoConstraints="NO" id="8G6-Sl-dNA">
                                                             <rect key="frame" x="0.0" y="0.0" width="301" height="320"/>
@@ -56,19 +56,19 @@
                                                                 <constraint firstAttribute="width" secondItem="Ca3-7h-V8f" secondAttribute="height" multiplier="1:1" id="ana-Y7-zCR"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="vTS-nd-dRI">
-                                                            <rect key="frame" x="100" y="326" width="101.5" height="66"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="-4" translatesAutoresizingMaskIntoConstraints="NO" id="vTS-nd-dRI">
+                                                            <rect key="frame" x="87" y="342" width="127" height="78"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECORD:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hg7-Rb-nzx">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="101.5" height="25"/>
-                                                                    <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="24"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="127" height="31"/>
+                                                                    <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="30"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                     <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ncr-5R-LKU">
-                                                                    <rect key="frame" x="0.0" y="25" width="101.5" height="41"/>
-                                                                    <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="40"/>
+                                                                    <rect key="frame" x="0.0" y="27" width="127" height="51"/>
+                                                                    <fontDescription key="fontDescription" name="Shadow-Regular" family="Shadow" pointSize="50"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                     <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -89,11 +89,11 @@
                                                         <constraint firstItem="8G6-Sl-dNA" firstAttribute="top" secondItem="xiu-9N-Zpb" secondAttribute="top" id="59z-uY-T9X"/>
                                                         <constraint firstItem="8G6-Sl-dNA" firstAttribute="leading" secondItem="xiu-9N-Zpb" secondAttribute="leading" id="EHG-bf-PhY"/>
                                                         <constraint firstItem="Ca3-7h-V8f" firstAttribute="centerX" secondItem="8G6-Sl-dNA" secondAttribute="centerX" id="K4J-I3-4bm"/>
-                                                        <constraint firstAttribute="bottom" secondItem="vTS-nd-dRI" secondAttribute="bottom" constant="8" id="L1Y-Nf-TZp"/>
+                                                        <constraint firstAttribute="bottom" secondItem="vTS-nd-dRI" secondAttribute="bottom" id="L1Y-Nf-TZp"/>
                                                         <constraint firstItem="Ca3-7h-V8f" firstAttribute="width" secondItem="xiu-9N-Zpb" secondAttribute="width" multiplier="0.5" id="RGe-r3-bdw"/>
                                                         <constraint firstAttribute="trailing" secondItem="8G6-Sl-dNA" secondAttribute="trailing" id="SVV-u8-6BG"/>
                                                         <constraint firstItem="Ca3-7h-V8f" firstAttribute="centerY" secondItem="8G6-Sl-dNA" secondAttribute="centerY" id="k1p-iO-fHr"/>
-                                                        <constraint firstAttribute="bottom" secondItem="8G6-Sl-dNA" secondAttribute="bottom" constant="80" id="lFc-Q1-QFb"/>
+                                                        <constraint firstAttribute="bottom" secondItem="8G6-Sl-dNA" secondAttribute="bottom" constant="100" id="lFc-Q1-QFb"/>
                                                         <constraint firstItem="vTS-nd-dRI" firstAttribute="centerX" secondItem="xiu-9N-Zpb" secondAttribute="centerX" id="p4F-Pn-DUe"/>
                                                     </constraints>
                                                 </view>
@@ -109,6 +109,8 @@
                                             <outlet property="back" destination="xiu-9N-Zpb" id="9J1-TH-pXw"/>
                                             <outlet property="imageBlockedContent" destination="Ca3-7h-V8f" id="ZmM-ck-8zS"/>
                                             <outlet property="imageContent" destination="8G6-Sl-dNA" id="5CH-iY-XCi"/>
+                                            <outlet property="stateRecord" destination="vTS-nd-dRI" id="fSb-n0-opX"/>
+                                            <outlet property="valueRecordLabel" destination="Ncr-5R-LKU" id="Q2v-rV-e1e"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -116,7 +118,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="mdU-qC-wIr" firstAttribute="bottom" secondItem="lxE-h9-5K2" secondAttribute="bottom" constant="80" id="CJ8-jF-wCX"/>
+                            <constraint firstItem="mdU-qC-wIr" firstAttribute="bottom" secondItem="lxE-h9-5K2" secondAttribute="bottom" constant="60" id="CJ8-jF-wCX"/>
                             <constraint firstItem="wMP-dM-i8J" firstAttribute="top" secondItem="KlH-08-aHd" secondAttribute="top" id="HUe-TX-9uG"/>
                             <constraint firstItem="lxE-h9-5K2" firstAttribute="leading" secondItem="KlH-08-aHd" secondAttribute="leading" id="IDo-F7-tck"/>
                             <constraint firstItem="wMP-dM-i8J" firstAttribute="leading" secondItem="KlH-08-aHd" secondAttribute="leading" id="Sgs-i7-uxG"/>
